save octadir value, allow fully qualified paths for sounds
Former-commit-id: f697cb2f6072a8cad499070b899ce67650238e07

--- a/data/sounds/package.cfg
+++ b/data/sounds/package.cfg
@@ -1,41 +1,41 @@
-registersound	"sfx/splash1"				96	"air"	64		//	S_SPLASH1
-registersound	"sfx/splash2"				128	"air"	64		//	S_SPLASH2
-registersound	"sfx/underwater"			224	"air"			//	S_UNDERWATER
-registersound	"sfx/splat"					224	"air"	128		//	S_SPLAT
-registersound	"sfx/splosh"				254	"air"	128		//	S_SPLOSH
-registersound	"sfx/debris"				196	"air"	128		//	S_DEBRIS
-registersound	"sfx/tink"					96	"air"	128		//	S_TINK
-registersound	"sfx/ricochet"				64	"air"	64		//	S_RICOCHET
-registersound	"sfx/whizz"					64	"air"	64		//	S_WHIZZ
-registersound	"sfx/whirr"					196	"air"	128		//	S_WHIRR
-registersound	"sfx/explode"				255	"air"	512		//	S_EXPLODE
-registersound	"sfx/energy"				64	"air"	64		//	S_ENERGY
-registersound	"sfx/hum"					128	"air"	128		//	S_HUM
-registersound	"sfx/burn"					64	"air"	64		//	S_BURN
-registersound	"sfx/burning"				128	"air"	128		//	S_BURNING
-registersound	"sfx/bzap"					64	"air"	64		//	S_BZAP
-registersound	"sfx/bzzt"					128	"air"	128		//	S_BZZT
-registersound	"sfx/weaponreload"			128	"air"	256		//	S_RELOAD
-registersound	"sfx/weapontrigger"			128	"air"	256		//	S_SWITCH
-registersound	"sfx/plasma"				128	"air"	256		//	S_PLASMA
-registersound	"sfx/shotgun"				224	"air"	256		//	S_SG
-registersound	"sfx/submachine"			128	"air"	256		//	S_SMG
-registersound	"sfx/grenadefire"			196	"air"	128		//	S_GLFIRE
-registersound	"sfx/flamer"				224	"air"	224		//	S_FLFIRE
-registersound	"sfx/pistol"				128	"air"	256		//	S_PISTOL
-registersound	"sfx/rifle"					254	"air"	512		//	S_RIFLE
-registersound	"sfx/paintgun"				64	"air"	256		//	S_PAINT
-registersound	"sfx/itempickup"			128	"air" 	128		//	S_ITEMPICKUP
-registersound	"sfx/itemspawn"				118	"air"	128		//	S_ITEMSPAWN
-registersound	"sfx/regenerate"			224	"air"	128		//	S_REGEN
-registersound	"sfx/damage1"				128	"air"	128		//	S_DAMAGE1
-registersound	"sfx/damage2"				128	"air"	128		//	S_DAMAGE2
-registersound	"sfx/damage3"				128	"air"	128		//	S_DAMAGE3
-registersound	"sfx/damage4"				128	"air"	128		//	S_DAMAGE4
-registersound	"sfx/damage5"				128	"air"	128		//	S_DAMAGE5
-registersound	"sfx/damage6"				128	"air"	128		//	S_DAMAGE6
-registersound	"sfx/damage7"				128	"air"	128		//	S_DAMAGE7
-registersound	"sfx/damage8"				128	"air"	128		//	S_DAMAGE8
-registersound	"sfx/respawn"				128	"air"	128		//	S_RESPAWN
-registersound	"sfx/chat"					255	"air" 			//	S_CHAT
-registersound	"sfx/denied"				255	"air"			//	S_DENIED
+registersound	"sounds/sfx/splash1"			96	"air"	64		//	S_SPLASH1
+registersound	"sounds/sfx/splash2"			128	"air"	64		//	S_SPLASH2
+registersound	"sounds/sfx/underwater"			224	"air"			//	S_UNDERWATER
+registersound	"sounds/sfx/splat"				224	"air"	128		//	S_SPLAT
+registersound	"sounds/sfx/splosh"				254	"air"	128		//	S_SPLOSH
+registersound	"sounds/sfx/debris"				196	"air"	128		//	S_DEBRIS
+registersound	"sounds/sfx/tink"				96	"air"	128		//	S_TINK
+registersound	"sounds/sfx/ricochet"			64	"air"	64		//	S_RICOCHET
+registersound	"sounds/sfx/whizz"				64	"air"	64		//	S_WHIZZ
+registersound	"sounds/sfx/whirr"				196	"air"	128		//	S_WHIRR
+registersound	"sounds/sfx/explode"			255	"air"	512		//	S_EXPLODE
+registersound	"sounds/sfx/energy"				64	"air"	64		//	S_ENERGY
+registersound	"sounds/sfx/hum"				128	"air"	128		//	S_HUM
+registersound	"sounds/sfx/burn"				64	"air"	64		//	S_BURN
+registersound	"sounds/sfx/burning"			128	"air"	128		//	S_BURNING
+registersound	"sounds/sfx/bzap"				64	"air"	64		//	S_BZAP
+registersound	"sounds/sfx/bzzt"				128	"air"	128		//	S_BZZT
+registersound	"sounds/sfx/weaponreload"		128	"air"	256		//	S_RELOAD
+registersound	"sounds/sfx/weapontrigger"		128	"air"	256		//	S_SWITCH
+registersound	"sounds/sfx/plasma"				128	"air"	256		//	S_PLASMA
+registersound	"sounds/sfx/shotgun"			224	"air"	256		//	S_SG
+registersound	"sounds/sfx/submachine"			128	"air"	256		//	S_SMG
+registersound	"sounds/sfx/grenadefire"		196	"air"	128		//	S_GLFIRE
+registersound	"sounds/sfx/flamer"				224	"air"	224		//	S_FLFIRE
+registersound	"sounds/sfx/pistol"				128	"air"	256		//	S_PISTOL
+registersound	"sounds/sfx/rifle"				254	"air"	512		//	S_RIFLE
+registersound	"sounds/sfx/paintgun"			64	"air"	256		//	S_PAINT
+registersound	"sounds/sfx/itempickup"			128	"air" 	128		//	S_ITEMPICKUP
+registersound	"sounds/sfx/itemspawn"			118	"air"	128		//	S_ITEMSPAWN
+registersound	"sounds/sfx/regenerate"			224	"air"	128		//	S_REGEN
+registersound	"sounds/sfx/damage1"			128	"air"	128		//	S_DAMAGE1
+registersound	"sounds/sfx/damage2"			128	"air"	128		//	S_DAMAGE2
+registersound	"sounds/sfx/damage3"			128	"air"	128		//	S_DAMAGE3
+registersound	"sounds/sfx/damage4"			128	"air"	128		//	S_DAMAGE4
+registersound	"sounds/sfx/damage5"			128	"air"	128		//	S_DAMAGE5
+registersound	"sounds/sfx/damage6"			128	"air"	128		//	S_DAMAGE6
+registersound	"sounds/sfx/damage7"			128	"air"	128		//	S_DAMAGE7
+registersound	"sounds/sfx/damage8"			128	"air"	128		//	S_DAMAGE8
+registersound	"sounds/sfx/respawn"			128	"air"	128		//	S_RESPAWN
+registersound	"sounds/sfx/chat"				255	"air" 			//	S_CHAT
+registersound	"sounds/sfx/denied"				255	"air"			//	S_DENIED
