--- a/data/sounds/player/package.cfg
+++ b/data/sounds/player/package.cfg
@@ -1,11 +1,11 @@
-registersound	"player/jump"				64	"air"	128		//	S_JUMP = S_GAMESPECIFIC
-registersound	"player/impulse"			36	"air"	96		//	S_IMPULSE
-registersound	"player/land"				18	"air"	96		//	S_LAND
-registersound	"player/pain1"				96	"air"	64		//	S_PAIN1
-registersound	"player/pain2"				96	"air"	64		//	S_PAIN2
-registersound	"player/pain3"				96	"air"	64		//	S_PAIN3
-registersound	"player/pain4"				96	"air"	64		//	S_PAIN4
-registersound	"player/pain5"				96	"air"	64		//	S_PAIN5
-registersound	"player/pain6"				96	"air"	64		//	S_PAIN6
-registersound	"player/death1"				96	"air"	64		//	S_DIE1
-registersound	"player/death2"				96	"air"	64		//	S_DIE2
+registersound	"sounds/player/jump"			64	"air"	128		//	S_JUMP = S_GAMESPECIFIC
+registersound	"sounds/player/impulse"			36	"air"	96		//	S_IMPULSE
+registersound	"sounds/player/land"			18	"air"	96		//	S_LAND
+registersound	"sounds/player/pain1"			96	"air"	64		//	S_PAIN1
+registersound	"sounds/player/pain2"			96	"air"	64		//	S_PAIN2
+registersound	"sounds/player/pain3"			96	"air"	64		//	S_PAIN3
+registersound	"sounds/player/pain4"			96	"air"	64		//	S_PAIN4
+registersound	"sounds/player/pain5"			96	"air"	64		//	S_PAIN5
+registersound	"sounds/player/pain6"			96	"air"	64		//	S_PAIN6
+registersound	"sounds/player/death1"			96	"air"	64		//	S_DIE1
+registersound	"sounds/player/death2"			96	"air"	64		//	S_DIE2
