--- a/data/sounds/ambience/package.cfg
+++ b/data/sounds/ambience/package.cfg
@@ -1,36 +1,36 @@
-mapsound "sfx/jumppad" 200 "air"
-mapsound "sfx/teleport" 200 "air"
-mapsound "ambience/alienwind" 200 "air"
-mapsound "ambience/blowwind" 200 "air"
-mapsound "ambience/cavedrip" 200 "air"
-mapsound "ambience/creek" 200 "air"
-mapsound "ambience/cycadas" 200 "air"
-mapsound "ambience/distant_cars" 200 "air"
-mapsound "ambience/dizzywind" 200 "air"
-mapsound "ambience/electro" 200 "air"
-mapsound "ambience/firelight" 200 "air"
-mapsound "ambience/forest1" 200 "air"
-mapsound "ambience/forest2" 200 "air"
-mapsound "ambience/forest3" 200 "air"
-mapsound "ambience/forestflies" 200 "air"
-mapsound "ambience/frogs" 200 "air"
-mapsound "ambience/hollowwind" 200 "air"
-mapsound "ambience/hum" 200 "air"
-mapsound "ambience/lava1" 200 "air"
-mapsound "ambience/lava2" 200 "air"
-mapsound "ambience/lavarumble1" 200 "air"
-mapsound "ambience/lavarumble2" 200 "air"
-mapsound "ambience/machine1" 200 "air"
-mapsound "ambience/machine2" 200 "air"
-mapsound "ambience/nightcrickets" 200 "air"
-mapsound "ambience/river" 200 "air"
-mapsound "ambience/wastewind" 200 "air"
-mapsound "ambience/water" 200 "air"
-mapsound "ambience/waterfall" 200 "air"
-mapsound "ambience/waterfall2" 200 "air"
-mapsound "ambience/waterfall3" 200 "air"
-mapsound "ambience/waterfall_deep" 200 "air"
-mapsound "ambience/waterfall_huge" 200 "air"
-mapsound "ambience/waterfall_indoor" 200 "air"
-mapsound "ambience/waterfall_medium" 200 "air"
-mapsound "ambience/wind" 200 "air"
+mapsound "sounds/sfx/jumppad" 200 "air"
+mapsound "sounds/sfx/teleport" 200 "air"
+mapsound "sounds/ambience/alienwind" 200 "air"
+mapsound "sounds/ambience/blowwind" 200 "air"
+mapsound "sounds/ambience/cavedrip" 200 "air"
+mapsound "sounds/ambience/creek" 200 "air"
+mapsound "sounds/ambience/cycadas" 200 "air"
+mapsound "sounds/ambience/distant_cars" 200 "air"
+mapsound "sounds/ambience/dizzywind" 200 "air"
+mapsound "sounds/ambience/electro" 200 "air"
+mapsound "sounds/ambience/firelight" 200 "air"
+mapsound "sounds/ambience/forest1" 200 "air"
+mapsound "sounds/ambience/forest2" 200 "air"
+mapsound "sounds/ambience/forest3" 200 "air"
+mapsound "sounds/ambience/forestflies" 200 "air"
+mapsound "sounds/ambience/frogs" 200 "air"
+mapsound "sounds/ambience/hollowwind" 200 "air"
+mapsound "sounds/ambience/hum" 200 "air"
+mapsound "sounds/ambience/lava1" 200 "air"
+mapsound "sounds/ambience/lava2" 200 "air"
+mapsound "sounds/ambience/lavarumble1" 200 "air"
+mapsound "sounds/ambience/lavarumble2" 200 "air"
+mapsound "sounds/ambience/machine1" 200 "air"
+mapsound "sounds/ambience/machine2" 200 "air"
+mapsound "sounds/ambience/nightcrickets" 200 "air"
+mapsound "sounds/ambience/river" 200 "air"
+mapsound "sounds/ambience/wastewind" 200 "air"
+mapsound "sounds/ambience/water" 200 "air"
+mapsound "sounds/ambience/waterfall" 200 "air"
+mapsound "sounds/ambience/waterfall2" 200 "air"
+mapsound "sounds/ambience/waterfall3" 200 "air"
+mapsound "sounds/ambience/waterfall_deep" 200 "air"
+mapsound "sounds/ambience/waterfall_huge" 200 "air"
+mapsound "sounds/ambience/waterfall_indoor" 200 "air"
+mapsound "sounds/ambience/waterfall_medium" 200 "air"
+mapsound "sounds/ambience/wind" 200 "air"
