--- a/data/sounds/announcer/alpha/package.cfg
+++ b/data/sounds/announcer/alpha/package.cfg
@@ -1,22 +1,22 @@
-registersound	"announcer/alpha/flagsecured"		224	"air"			//	S_V_FLAGSECURED
-registersound	"announcer/alpha/flagoverthrown"	224	"air"			//	S_V_FLAGOVERTHROWN
-registersound	"announcer/alpha/flagtaken"			224	"air"			//	S_V_FLAGPICKUP
-registersound	"announcer/alpha/flagdropped"		224	"air"			//	S_V_FLAGDROP
-registersound	"announcer/alpha/flagreturned"		224	"air"			//	S_V_FLAGRETURN
-registersound	"announcer/alpha/flagcaptured"		224	"air"			//	S_V_FLAGSCORE
-registersound	"announcer/alpha/flagreset"			224	"air"			//	S_V_FLAGRESET
-registersound	"announcer/alpha/fight"				224	"air"			//	S_V_FIGHT
-registersound	"announcer/alpha/checkpoint"		224	"air"			//	S_V_CHECKPOINT
-registersound	"announcer/alpha/oneminute"			224	"air"			//	S_V_ONEMINUTE
-registersound	"announcer/alpha/headshot"			224	"air"			//	S_V_HEADSHOT
-registersound	"announcer/alpha/carnage"			224	"air"			//	S_V_SPREE1
-registersound	"announcer/alpha/slaughter"			224	"air"			//	S_V_SPREE2
-registersound	"announcer/alpha/massacre"			224	"air"			//	S_V_SPREE3
-registersound	"announcer/alpha/bloodbath"			224	"air"			//	S_V_SPREE4
-registersound	"announcer/alpha/youwin"			224	"air"			//	S_V_YOUWIN
-registersound	"announcer/alpha/youlose"			224	"air"			//	S_V_YOULOSE
-registersound	"announcer/alpha/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
-registersound	"announcer/alpha/fragged"			224	"air"			//	S_V_FRAGGED
-registersound	"announcer/alpha/owned"				224	"air"			//	S_V_OWNED
-registersound	"announcer/alpha/owned"				224	"air"			//	S_V_DENIED
-registersound	"announcer/alpha/owned"				224	"air"			//	S_V_SPREE5
+registersound	"sounds/announcer/alpha/flagsecured"		224	"air"			//	S_V_FLAGSECURED
+registersound	"sounds/announcer/alpha/flagoverthrown"		224	"air"			//	S_V_FLAGOVERTHROWN
+registersound	"sounds/announcer/alpha/flagtaken"			224	"air"			//	S_V_FLAGPICKUP
+registersound	"sounds/announcer/alpha/flagdropped"		224	"air"			//	S_V_FLAGDROP
+registersound	"sounds/announcer/alpha/flagreturned"		224	"air"			//	S_V_FLAGRETURN
+registersound	"sounds/announcer/alpha/flagcaptured"		224	"air"			//	S_V_FLAGSCORE
+registersound	"sounds/announcer/alpha/flagreset"			224	"air"			//	S_V_FLAGRESET
+registersound	"sounds/announcer/alpha/fight"				224	"air"			//	S_V_FIGHT
+registersound	"sounds/announcer/alpha/checkpoint"			224	"air"			//	S_V_CHECKPOINT
+registersound	"sounds/announcer/alpha/oneminute"			224	"air"			//	S_V_ONEMINUTE
+registersound	"sounds/announcer/alpha/headshot"			224	"air"			//	S_V_HEADSHOT
+registersound	"sounds/announcer/alpha/carnage"			224	"air"			//	S_V_SPREE1
+registersound	"sounds/announcer/alpha/slaughter"			224	"air"			//	S_V_SPREE2
+registersound	"sounds/announcer/alpha/massacre"			224	"air"			//	S_V_SPREE3
+registersound	"sounds/announcer/alpha/bloodbath"			224	"air"			//	S_V_SPREE4
+registersound	"sounds/announcer/alpha/youwin"				224	"air"			//	S_V_YOUWIN
+registersound	"sounds/announcer/alpha/youlose"			224	"air"			//	S_V_YOULOSE
+registersound	"sounds/announcer/alpha/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
+registersound	"sounds/announcer/alpha/fragged"			224	"air"			//	S_V_FRAGGED
+registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_OWNED
+registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_DENIED
+registersound	"sounds/announcer/alpha/owned"				224	"air"			//	S_V_SPREE5
