--- a/data/sounds/announcer/beta/package.cfg
+++ b/data/sounds/announcer/beta/package.cfg
@@ -1,22 +1,22 @@
-registersound	"announcer/beta/flagsecured"		224	"air"			//	S_V_FLAGSECURED
-registersound	"announcer/beta/flagoverthrown"		224	"air"			//	S_V_FLAGOVERTHROWN
-registersound	"announcer/beta/flagtaken"			224	"air"			//	S_V_FLAGPICKUP
-registersound	"announcer/beta/flagdropped"		224	"air"			//	S_V_FLAGDROP
-registersound	"announcer/beta/flagreturned"		224	"air"			//	S_V_FLAGRETURN
-registersound	"announcer/beta/flagcaptured"		224	"air"			//	S_V_FLAGSCORE
-registersound	"announcer/beta/flagreset"			224	"air"			//	S_V_FLAGRESET
-registersound	"announcer/beta/fight"				224	"air"			//	S_V_FIGHT
-registersound	"announcer/beta/checkpoint"			224	"air"			//	S_V_CHECKPOINT
-registersound	"announcer/beta/oneminute"			224	"air"			//	S_V_ONEMINUTE
-registersound	"announcer/beta/headshot"			224	"air"			//	S_V_HEADSHOT
-registersound	"announcer/beta/carnage"			224	"air"			//	S_V_SPREE1
-registersound	"announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
-registersound	"announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
-registersound	"announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
-registersound	"announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
-registersound	"announcer/beta/youlose"			224	"air"			//	S_V_YOULOSE
-registersound	"announcer/beta/missioncomplete"	224	"air"			//	S_V_MCOMPLETE
-registersound	"announcer/beta/fragged"			224	"air"			//	S_V_FRAGGED
-registersound	"announcer/beta/owned"				224	"air"			//	S_V_OWNED
-registersound	"announcer/beta/owned"				224	"air"			//	S_V_DENIED
-registersound	"announcer/beta/owned"				224	"air"			//	S_V_SPREE5
+registersound	"sounds/announcer/beta/flagsecured"			224	"air"			//	S_V_FLAGSECURED
+registersound	"sounds/announcer/beta/flagoverthrown"		224	"air"			//	S_V_FLAGOVERTHROWN
+registersound	"sounds/announcer/beta/flagtaken"			224	"air"			//	S_V_FLAGPICKUP
+registersound	"sounds/announcer/beta/flagdropped"			224	"air"			//	S_V_FLAGDROP
+registersound	"sounds/announcer/beta/flagreturned"		224	"air"			//	S_V_FLAGRETURN
+registersound	"sounds/announcer/beta/flagcaptured"		224	"air"			//	S_V_FLAGSCORE
+registersound	"sounds/announcer/beta/flagreset"			224	"air"			//	S_V_FLAGRESET
+registersound	"sounds/announcer/beta/fight"				224	"air"			//	S_V_FIGHT
+registersound	"sounds/announcer/beta/checkpoint"			224	"air"			//	S_V_CHECKPOINT
+registersound	"sounds/announcer/beta/oneminute"			224	"air"			//	S_V_ONEMINUTE
+registersound	"sounds/announcer/beta/headshot"			224	"air"			//	S_V_HEADSHOT
+registersound	"sounds/announcer/beta/carnage"				224	"air"			//	S_V_SPREE1
+registersound	"sounds/announcer/beta/slaughter"			224	"air"			//	S_V_SPREE2
+registersound	"sounds/announcer/beta/massacre"			224	"air"			//	S_V_SPREE3
+registersound	"sounds/announcer/beta/bloodbath"			224	"air"			//	S_V_SPREE4
+registersound	"sounds/announcer/beta/youwin"				224	"air"			//	S_V_YOUWIN
+registersound	"sounds/announcer/beta/youlose"				224	"air"			//	S_V_YOULOSE
+registersound	"sounds/announcer/beta/missioncomplete"		224	"air"			//	S_V_MCOMPLETE
+registersound	"sounds/announcer/beta/fragged"				224	"air"			//	S_V_FRAGGED
+registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_OWNED
+registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_DENIED
+registersound	"sounds/announcer/beta/owned"				224	"air"			//	S_V_SPREE5
