--- a/data/sounds/gui.cfg
+++ b/data/sounds/gui.cfg
@@ -1,3 +1,3 @@
-registersound	"sfx/press"					128	"air"			//	S_GUIPRESS
-registersound	"sfx/back"					128	"air"			//	S_GUIBACK
-registersound	"sfx/change"				128	"air"			//	S_GUIACT
+registersound	"sounds/sfx/press"			128	"air"			//	S_GUIPRESS
+registersound	"sounds/sfx/back"			128	"air"			//	S_GUIBACK
+registersound	"sounds/sfx/change"			128	"air"			//	S_GUIACT
