master volume control
Former-commit-id: f452150f3b7e591fc332589b59afdf2e0de797b3

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -113,8 +113,12 @@ bind BACKQUOTE		"saycommand /"
 bind SLASH			"saycommand /"
 bind Y 				[ if (& (mutators) 0x0002) [ sayteamcommand ] [ saytextcommand ] ]
 
-bind KP_MINUS		[ conskip 1 ]
-bind KP_PLUS		[ conskip -1000 ]
+bind KP_MINUS		[ mastervol (max (- $mastervol 5) 0) ]
+bind KP_PLUS		[ mastervol (min (+ $mastervol 5) 255) ]
+bind KP_DIVIDE		[ togglesound ]
+
+bind PAGEDOWN		[ conskip 1 ]
+bind PAGEUP			[ conskip -1000 ]
 
 bind INSERT			[ addbot ]
 bind DELETE			[ delbot ]
@@ -158,10 +162,6 @@ editbindvar 0		allfaces
 editbindvar K		blankgeom
 editbind C			[ domodifier 9 ]
 
-bind KP_DIVIDE		[ togglesound ]
-bind KP_MINUS		[ conskip 1 ]
-bind KP_PLUS		[ conskip -1000 ]
-
 editbind INSERT 	[ sendmap ]
 editbind DELETE		[ getmap ]
 
@@ -191,8 +191,8 @@ editbind TAB [
 
 bind MOUSE4			[ universaldelta 1 ]	// also used for editing, see below
 bind MOUSE5			[ universaldelta -1 ]
-bind PAGEUP			[ universaldelta 1 ]
-bind PAGEDOWN		[ universaldelta -1 ]
+bind LEFTBRACKET	[ universaldelta 1 ]
+bind RIGHTBRACKET	[ universaldelta -1 ]
 
 editbind SPACE  	[ cancelsel ]
 editbind MOUSE1		[ if $blendpaintmode paintblendmap editdrag ]
