--- a/data/maps/eight.cfg
+++ b/data/maps/eight.cfg
@@ -11,12 +11,12 @@
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
 // cloudalpha 1.0
-// cloudblend 1.0
+// cloudblend 0.75
 // cloudbox "<mad:0.2/0.2/0.4>acord/sky3"
-// cloudclip 0.5
+// cloudclip 0.0
 // cloudcolour 0xFFFFFF
-// cloudfade 0.2
-// cloudheight 0.2
+// cloudfade 0.1
+// cloudheight 0.01
 // cloudlayer ""
 // cloudscale 1.0
 // cloudscrollx 0.0
@@ -73,7 +73,7 @@
 // slopez 0.5
 // spincloudlayer 0.0
 // spinclouds -0.5
-// spinsky 0.1
+// spinsky 0.2
 // stairheight 4.1
 // stepspeed 1.0
 // vertwater 1
@@ -423,4 +423,5 @@ mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 75 "air" -1 -1
 mapsound "ambience/water" 100 "air" -1 -1
 mapsound "ambience/waterfall" 75 "air" -1 -1
+mapsound "sounds/ambience/nightcrickets" 200 "air" -1 -1
 
