--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -10,12 +10,13 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
+// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox "acord/sky7"
 // cloudclip 0.0
 // cloudcolour 0xFFFFFF
-// cloudfade 0.5
-// cloudheight 0.2
+// cloudfade 0.25
+// cloudheight 0.05
 // cloudlayer "acord/cloudlayer"
 // cloudscale 0.4
 // cloudscrollx 0.01
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
@@ -116,7 +123,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg"" 0 0 0 0.500000 // 5
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 5
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
@@ -1272,4 +1279,5 @@ mapsound "ambience/hollowwind" 25 "air" -1 -1
 mapsound "ambience/machine1" 75 "air" -1 -1
 mapsound "ambience/water" 100 "air" -1 -1
 mapsound "ambience/waterfall" 75 "air" -1 -1
+mapsound "sounds/ambience/hum" 200 "air" -1 -1
 
