--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -6,10 +6,10 @@ texture c "acord/black.png" 0 0 0 0
 
 setshader bumpspecmapparallaxworld
 
-texture 0 "acord/asphalt.jpg" 1 0 0 0.5
-texture n "acord/asphaltn.jpg" 1 0 0 0.5
-texture s "acord/lowspec.jpg" 1
-texture z "acord/asphaltz.jpg" 1 0 0 0.5
+texture 0 "acord/asphalt3.jpg" 0 0 0 0.5
+texture n "acord/asphalt3n.jpg" 0 0 0 0.5
+texture s "acord/asphalt3s.jpg" 0 0 0 0.5
+texture z "acord/asphalt3z.jpg" 0 0 0 0.5
 
 texture 0 "acord/barlighta.jpg" 0 0 0 0.5
 texture n "acord/barlightan.jpg" 0 0 0 0.5
@@ -1264,6 +1264,38 @@ texture 0 "acord/wall_conc1.jpg"  1 0 0 0.5
 texture n "acord/wall_conc1n.jpg" 1 0 0 0.5
 texture s "acord/wall_conc1s.jpg" 1 0 0 0.5
 texture z "acord/wall_conc1z.jpg" 1 0 0 0.5
+
+texture 0 "acord/conc7.jpg" 0 0 0 0.5
+texture n "acord/conc7n.jpg" 0 0 0 0.5
+texture s "acord/conc7s.jpg" 0 0 0 0.5
+texture z "acord/conc7z.jpg" 0 0 0 0.5
+
+texture 0 "acord/conc7.jpg"  1 0 0 0.5
+texture n "acord/conc7n.jpg" 1 0 0 0.5
+texture s "acord/conc7s.jpg" 1 0 0 0.5
+texture z "acord/conc7z.jpg" 1 0 0 0.5
+
+texture 0 "acord/conc11.jpg" 0 0 0 0.5
+texture n "acord/conc11n.jpg" 0 0 0 0.5
+texture s "acord/conc11s.jpg" 0 0 0 0.5
+texture z "acord/conc11z.jpg" 0 0 0 0.5
+
+texture 0 "acord/conc11.jpg"  1 0 0 0.5
+texture n "acord/conc11n.jpg" 1 0 0 0.5
+texture s "acord/conc11s.jpg" 1 0 0 0.5
+texture z "acord/conc11z.jpg" 1 0 0 0.5
+
+texture 0 "acord/decwall1.jpg"   0 0 0 0.5
+texture n "acord/decwall1n.jpg"  0 0 0 0.5
+texture s "acord/decwall1s.jpg"  0 0 0 0.5
+texture z "acord/decwall1z.jpg"  0 0 0 0.5
+
+texture 0 "acord/decwall1.jpg"   1 0 0 0.5
+texture n "acord/decwall1n.jpg"  1 0 0 0.5
+texture s "acord/decwall1s.jpg"  1 0 0 0.5
+texture z "acord/decwall1z.jpg"  1 0 0 0.5
+
+texture 0 "acord
 
 
 
