--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -147,10 +147,10 @@ setshader stdworld
 texture c "acord/black.png" 0 0 0 1.000000 // 9
 
 setshader bumpspecmapparallaxworld
-texture c "acord/asphalt.jpg" 1 0 0 0.500000 // 10
-texture n "acord/asphaltn.jpg"
-texture s "acord/lowspec.jpg"
-texture z "acord/asphaltz.jpg"
+texture c "acord/asphalt3.jpg" 1 0 0 0.500000 // 10
+texture n "acord/asphalt3n.jpg"
+texture s "acord/asphalt3s.jpg"
+texture z "acord/asphalt3z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/barlighta.jpg" 0 0 0 0.500000 // 11
@@ -1473,10 +1473,10 @@ setshader stdworld
 texture c "acord/black.png" 0 0 0 1.000000 // 232
 
 setshader bumpspecmapparallaxworld
-texture c "acord/asphalt.jpg" 1 0 0 0.500000 // 233
-texture n "acord/asphaltn.jpg"
-texture s "acord/lowspec.jpg"
-texture z "acord/asphaltz.jpg"
+texture c "acord/asphalt3.jpg" 1 0 0 0.500000 // 233
+texture n "acord/asphalt3n.jpg"
+texture s "acord/asphalt3s.jpg"
+texture z "acord/asphalt3z.jpg"
 
 setshader bumpspecmapparallaxworld
 texture c "acord/barlighta.jpg" 0 0 0 0.500000 // 234
