more sound tweaking, altered default map/rotation setup
Former-commit-id: a37cda94cdf54364b1ea91f5cdfd3ea35491dc40

--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -10,6 +10,7 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
+// cloudalpha 1.0
 // cloudblend 0.8
 // cloudbox "<mad:1/0/0>skyboxes/gradient"
 // cloudclip 0.0
@@ -30,6 +31,12 @@
 // floorz 0.867
 // fog 2400
 // fogcolour 0x400800
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grassstep 2.0
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
