--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1295,13 +1295,15 @@ texture n "acord/decwall1n.jpg"  1 0 0 0.5
 texture s "acord/decwall1s.jpg"  1 0 0 0.5
 texture z "acord/decwall1z.jpg"  1 0 0 0.5
 
-texture 0 "acord
+texture 0 "acord/tech2.jpg"  0 0 0 0.5
+texture n "acord/tech2n.jpg" 0 0 0 0.5
+texture s "acord/tech2s.jpg" 0 0 0 0.5
+texture z "acord/tech2z.jpg" 0 0 0 0.5
 
-
-
-
-
-
+texture 0 "acord/tech2.jpg"  1 0 0 0.5
+texture n "acord/tech2n.jpg" 1 0 0 0.5
+texture s "acord/tech2s.jpg" 1 0 0 0.5
+texture z "acord/tech2z.jpg" 1 0 0 0.5
 
 setshader stdworld
 
