more incessant ambient sound tweaking
Former-commit-id: 70c2c900e00dba4d7395f8ef292055e284d794fb

--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -10,6 +10,7 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
+// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
@@ -30,6 +31,11 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
+// grassanimmillis 3000
+// grassanimscale 0.03
+// grassheight 4
+// grassscale 2
+// grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
 // impulsespeed 50.0
@@ -177,7 +183,7 @@ texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
 
 setshader bumpspecmapparallaxworld
-texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg"" 0 0 0 0.500000 // 3
+texture c "<mad:0.75/0.75/0.25>acord/nfloor1.jpg" 0 0 0 1.000000 // 3
 texture n "acord/nfloor1n.jpg"
 texture s "acord/nfloor1s.jpg"
 texture z "acord/nfloor1z.jpg"
@@ -453,9 +459,9 @@ mmodel "acord/doors/door1"
 mmodel "acord/doors/door2"
 
 mapsound "sfx/teleport" 255 "air" -1 -1
-mapsound "ambience/wastewind" 32 "air" -1 -1
-mapsound "ambience/hollowwind" 32 "air" -1 -1
-mapsound "ambience/machine1" 32 "air" -1 -1
-mapsound "sfx/door" 128 "air" -1 -1
-mapsound "ambience/hum" 192 "air" 450 0
+mapsound "ambience/wastewind" 255 "air" -1 -1
+mapsound "ambience/hollowwind" 255 "air" -1 -1
+mapsound "ambience/machine1" 255 "air" -1 -1
+mapsound "sfx/door" 255 "air" -1 -1
+mapsound "ambience/hum" 255 "air" 450 0
 
