new map "bloodgrounds" by w!ck3d, more audio tweaking, main menu on start
Former-commit-id: ee3a61669433884dfe3fc17b1dca206269ef0ea9

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -6,11 +6,12 @@ newgui main [
 	if (= $editing 1) [
 		guibutton	"editing.."			"showgui editing"
 	]
-	guibutton		"game.." 			"showgui game"
-	guibutton 		"servers.."			"showgui servers"	"server"
-	guibutton		"options.."			"showgui options"
-	guibutton		"misc.."			"showgui misc"
-	guibutton		"help.."			"showgui help"
+	guibutton		"quick play.." 		"localconnect"		"menu"
+	guibutton		"start game.." 		"showgui game"
+	guibutton 		"play online.."		"showgui servers"
+	guibutton		"set options.."		"showgui options"
+	guibutton		"misc. stuff.."		"showgui misc"
+	guibutton		"show help.."		"showgui help"
 	guibutton		"quit"				"quit"				"exit"
 ]
 
