--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -50,6 +50,8 @@ instalms			= [ start $arg1 4 0x0014 ]; mapcomplete instalms
 paintball			= [ start $arg1 4 0x0020 ]; mapcomplete paintball
 instapaint			= [ start $arg1 4 0x0024 ]; mapcomplete instapaint
 
+toggleedit			= [ if (= (gamemode) 2) [ edittoggle ] [ edit (mapname) ] ] 
+
 delta_game_0 		= [ if (iszooming) [ setzoom $arg1 ] [ weapon -1 $arg1 ] ]; setcomplete delta_game_0 off
 
 delta_edit_0		= [
