last of the mo-tweakin's
Former-commit-id: 13b1cc15a2a74eca0ef1f3128678911b98122cab

--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -38,7 +38,7 @@
 // grasstaper 0.2
 // gravity 40.0
 // impulsegravity 62.5
-// impulsespeed 100.0
+impulsespeed 50.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -60,7 +60,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 4
+numplayers 8
 // numteamplayers 4
 // refractfog 1
 // shadowmapambient 0x000000
