--- a/data/maps/dualstar.cfg
+++ b/data/maps/dualstar.cfg
@@ -60,7 +60,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 12
+numplayers 12
 // numteamplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
