--- a/data/maps/refuge.cfg
+++ b/data/maps/refuge.cfg
@@ -60,7 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 7
+numplayers 8
 // numteamplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
