--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -54,8 +54,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 4
-// numteamplayers 4
+numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
