--- a/data/maps/warehouse.cfg
+++ b/data/maps/warehouse.cfg
@@ -54,8 +54,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 7
-// numteamplayers 8
+numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
