--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -929,9 +929,9 @@ newgui options [
       guitext " (0 - 1000, default: 0.05)"
     ]
     guilist [
-      guitext "sniper crosshair size: "
-      snipecrosshairsizestorage = $snipecrosshairsize
-      guifield snipecrosshairsizestorage 6 [snipecrosshairsize $snipecrosshairsizestorage]
+      guitext "zoom crosshair size: "
+      zoomcrosshairsizestorage = $zoomcrosshairsize
+      guifield zoomcrosshairsizestorage 6 [zoomcrosshairsize $zoomcrosshairsizestorage]
       guitext " (0 - 1000, default: 0.575)"
     ]
     guibar
@@ -989,6 +989,8 @@ newgui options [
     ]
 
     guitab   "sound"
+    guitext "master volume"
+    guislider mastervol
     guitext "sound volume"
     guislider soundvol
     guitext "music volume"
@@ -1022,21 +1024,21 @@ newgui options [
 		guilist [
 			guitext "fixed"
 			guiradio "default" mousetype 0
-			guiradio "snipe" snipemousetype 0
+			guiradio "zoom" zoommousetype 0
 			guiradio "prone" pronemousetype 0
 		]
 		guibar
 		guilist [
 			guitext "panned"
 			guiradio "default" mousetype 1
-			guiradio "snipe" snipemousetype 1
+			guiradio "zoom" zoommousetype 1
 			guiradio "prone" pronemousetype 1
 		]
 		guibar
 		guilist [
 			guitext "free"
 			guiradio "default" mousetype 2
-			guiradio "snipe" snipemousetype 2
+			guiradio "zoom" zoommousetype 2
 			guiradio "prone" pronemousetype 2
 		]
 	]
