--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -54,7 +54,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 10
+numplayers 10
 // numteamplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
