--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -60,7 +60,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 62.0
-// numplayers 6
+numplayers 6
 // numteamplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
