--- a/data/maps/bloodgrounds.cfg
+++ b/data/maps/bloodgrounds.cfg
@@ -60,7 +60,7 @@ maptitle "BloodGrounds (Q3DM6) by Jonathan 'W!CK3D'"
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 10
+numplayers 10
 // numteamplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
