--- a/data/maps/deli.cfg
+++ b/data/maps/deli.cfg
@@ -60,7 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 10
+numplayers 12
 // numteamplayers 14
 // refractfog 1
 // shadowmapambient 0x000000
