--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -61,7 +61,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 7
+numplayers 8
 // numteamplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
