--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -60,7 +60,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 10
+numplayers 10
 // numteamplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
