--- a/data/maps/overseer.cfg
+++ b/data/maps/overseer.cfg
@@ -60,7 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 5
+numplayers 4
 // numteamplayers 4
 // refractfog 1
 // shadowmapambient 0x000000
