--- a/data/maps/panic.cfg
+++ b/data/maps/panic.cfg
@@ -60,7 +60,7 @@
 // mmshadows 2
 // mmskylight 1
 // movespeed 50.0
-// numplayers 8
+numplayers 8
 // numteamplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
