--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -60,7 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 5
+numplayers 6
 // numteamplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
