--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -54,7 +54,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 12
+numplayers 14
 // numteamplayers 12
 // refractfog 1
 // shadowmapambient 0x000000
