--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -60,7 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 10
+numplayers 10
 // numteamplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
