--- a/data/maps/tower.cfg
+++ b/data/maps/tower.cfg
@@ -60,8 +60,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-// numplayers 9
-// numteamplayers 10
+numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
