some blendmap goodness
Former-commit-id: 9385a4694eff40f9f02dcc4f1fd34c981e40a40d

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -1269,3 +1269,4 @@ newgui seltexinfo [
     ] ]
     loop x 5 [ tex = (gettexname (getseltex) $x)); if (strcmp $tex "") [] [guitext $tex]]
 ]
+texinfo = [ showgui seltexinfo ]
