Former-commit-id: 0b7be446a8b701da9b129ce53c817b5da9caca38

--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -30,7 +30,7 @@
 // floorz 0.867
 // fog 1250
 // fogcolour 0x101010
-// gravity 30.0
+gravity 35.0
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
