--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -37,7 +37,7 @@
 // grassscale 2
 // grassstep 2.0
 // grasstaper 0.2
-// gravity 40.0
+gravity 50
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
