--- a/data/maps/mpspbf2.cfg
+++ b/data/maps/mpspbf2.cfg
@@ -19,7 +19,7 @@ impulsespeed 50.0
 // cloudclip 0.2
 // cloudfade 0.5
 // skytexture 1
-// gravity 120.0
+gravity 60.0
 numteamplayers 4
 // cloudscale 0.4
 // stepspeed 1.0
