--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -30,7 +30,7 @@
 // floorz 0.867
 // fog 100000
 // fogcolour 0x8099B3
-// gravity 40.0
+gravity 50
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
