--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -30,7 +30,7 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
-// gravity 15.0
+gravity 25.0
 // impulsegravity 75.0
 // impulsespeed 50.0
 // impulsetime 0
