--- a/data/maps/nova.cfg
+++ b/data/maps/nova.cfg
@@ -36,7 +36,7 @@
 // grassheight 4
 // grassscale 2
 // grasstaper 0.2
-// gravity 40.0
+gravity 50
 // impulsegravity 100.0
 // impulsespeed 50.0
 // impulsetime 0
