--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -36,7 +36,7 @@
 // grassheight 4
 // grassscale 2
 // grasstaper 0.2
-// gravity 40.0
+gravity 50
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
