--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -35,7 +35,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 40.0
+gravity 50
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
