--- a/data/models/actors/player/delta/md5.cfg
+++ b/data/models/actors/player/delta/md5.cfg
@@ -8,66 +8,66 @@ md5tag waist tag_flag
 md5skin mesh "<dds>skin.jpg" "<dds>../mask.jpg"
 md5bumpmap mesh "<dds>../normals.jpg"
 
-md5anim "idle"                         "../idle.md5anim"           1
-md5anim "dying"                        "../dying.md5anim"          8
-md5anim "dead"                         "../dead.md5anim"           8
-md5anim "idle"                         "../idle.md5anim"           1
-md5anim "plasma"                       "../idle.md5anim"           1
-md5anim "shotgun"                      "../idle.md5anim"           1
-md5anim "submachine"                   "../idle.md5anim"           1
-md5anim "flamer"                       "../idle.md5anim"           1
-md5anim "pistol"                       "../idle.md5anim"           1
-md5anim "rifle"                        "../idle.md5anim"           1
-md5anim "paintgun"                     "../idle.md5anim"           1
-md5anim "grenades"                     "../idle.md5anim"           1
-md5anim "forward"                      "../forward.md5anim"        8
-md5anim "backward"                     "../backward.md5anim"       8
-md5anim "left"                         "../left.md5anim"           8
-md5anim "right"                        "../right.md5anim"          8
-md5anim "jump"                         "../jump.md5anim"           8
-md5anim "impulse"                      "../jump.md5anim"           8
-md5anim "sink"                         "../jump.md5anim"           8
-md5anim "swim"                         "../jump.md5anim"           8
-md5anim "crouch"                       "../crouch.md5anim"         2
-md5anim "crawl forward"                "../c_for.md5anim"          8
-md5anim "crawl backward"               "../c_bac.md5anim"          8
-md5anim "crawl right"                  "../c_rig.md5anim"          8
-md5anim "crawl left"                   "../c_lef.md5anim"          8
+md5anim "idle" "../idle.md5anim" 1
+md5anim "dying" "../dying.md5anim" 8
+md5anim "dead" "../dead.md5anim" 8
+md5anim "idle" "../idle.md5anim" 1
+md5anim "plasma" "../idle.md5anim" 1
+md5anim "shotgun" "../idle.md5anim" 1
+md5anim "smg" "../idle.md5anim" 1
+md5anim "flamer" "../idle.md5anim" 1
+md5anim "pistol" "../idle.md5anim" 1
+md5anim "rifle" "../idle.md5anim" 1
+md5anim "paintgun" "../idle.md5anim" 1
+md5anim "grenade" "../idle.md5anim" 1
+md5anim "forward" "../forward.md5anim" 8
+md5anim "backward" "../backward.md5anim" 8
+md5anim "left" "../left.md5anim" 8
+md5anim "right" "../right.md5anim" 8
+md5anim "jump" "../jump.md5anim" 8
+md5anim "impulse" "../jump.md5anim" 8
+md5anim "sink" "../jump.md5anim" 8
+md5anim "swim" "../jump.md5anim" 8
+md5anim "crouch" "../crouch.md5anim" 2
+md5anim "crawl forward" "../c_for.md5anim" 8
+md5anim "crawl backward" "../c_bac.md5anim" 8
+md5anim "crawl right" "../c_rig.md5anim" 8
+md5anim "crawl left" "../c_lef.md5anim" 8
 
 md5animpart Abdomen
 md5pitch Abdomen 0.75 0 -45 40
 md5pitch Head 0.5 0 -10 10
 
-md5anim "idle"                         "../g_idle.md5anim"         1
-md5anim "dying"                        "../dying.md5anim"          8
-md5anim "dead"                         "../dead.md5anim"           8
-md5anim "pain"                         "../t_pain.md5anim"         25
-md5anim "switch" 		               "../g_reload.md5anim"       8
-md5anim "plasma"                       "../g_idle.md5anim"         1
-md5anim "plasma shoot"                 "../g_shoot.md5anim"        25
-md5anim "plasma reload"                "../g_reload.md5anim"       8
-md5anim "shotgun"                      "../g_idle.md5anim"         1
-md5anim "shotgun shoot"                "../g_shoot.md5anim"        25
-md5anim "shotgun reload"               "../g_reload.md5anim"       8
-md5anim "submachine"                   "../g_idle.md5anim"         1
-md5anim "submachine shoot"             "../g_shoot.md5anim"        25
-md5anim "submachine reload"            "../g_reload.md5anim"       8
-md5anim "flamer"                       "../g_idle.md5anim"         1
-md5anim "flamer shoot"                 "../g_shoot.md5anim"        25
-md5anim "flamer reload"                "../g_reload.md5anim"       8
-md5anim "pistol"                       "../g_idle.md5anim"         1
-md5anim "pistol shoot"                 "../g_shoot.md5anim"        25
-md5anim "pistol reload"                "../g_reload.md5anim"       8
-md5anim "rifle"                        "../g_idle.md5anim"         1
-md5anim "rifle shoot"                  "../g_shoot.md5anim"        25
-md5anim "rifle reload"                 "../g_reload.md5anim"       8
-md5anim "paintgun"                     "../g_idle.md5anim"         1
-md5anim "paintgun shoot"               "../g_shoot.md5anim"        25
-md5anim "paintgun reload"              "../g_reload.md5anim"       8
-md5anim "grenades"                     "../frag_idle.md5anim"      1
-md5anim "grenades throw"               "../frag_throw.md5anim"     35
-md5anim "grenades reload"              "../g_reload.md5anim"       6
-md5anim "grenades power"               "../frag_power.md5anim"     10
+md5anim "idle" "../g_idle.md5anim" 1
+md5anim "dying" "../dying.md5anim" 8
+md5anim "dead" "../dead.md5anim" 8
+md5anim "pain" "../t_pain.md5anim" 25
+md5anim "switch" "../g_reload.md5anim" 8
+md5anim "plasma" "../g_idle.md5anim" 1
+md5anim "plasma shoot" "../g_shoot.md5anim" 25
+md5anim "plasma reload" "../g_reload.md5anim" 8
+md5anim "shotgun" "../g_idle.md5anim" 1
+md5anim "shotgun shoot" "../g_shoot.md5anim" 25
+md5anim "shotgun reload" "../g_reload.md5anim" 8
+md5anim "smg" "../g_idle.md5anim" 1
+md5anim "smg shoot" "../g_shoot.md5anim" 25
+md5anim "smg reload" "../g_reload.md5anim" 8
+md5anim "flamer" "../g_idle.md5anim" 1
+md5anim "flamer shoot" "../g_shoot.md5anim" 25
+md5anim "flamer reload" "../g_reload.md5anim" 8
+md5anim "pistol" "../g_idle.md5anim" 1
+md5anim "pistol shoot" "../g_shoot.md5anim" 25
+md5anim "pistol reload" "../g_reload.md5anim" 8
+md5anim "rifle" "../g_idle.md5anim" 1
+md5anim "rifle shoot" "../g_shoot.md5anim" 25
+md5anim "rifle reload" "../g_reload.md5anim" 8
+md5anim "paintgun" "../g_idle.md5anim" 1
+md5anim "paintgun shoot" "../g_shoot.md5anim" 25
+md5anim "paintgun reload" "../g_reload.md5anim" 8
+md5anim "grenade" "../frag_idle.md5anim" 1
+md5anim "grenade throw" "../frag_throw.md5anim" 35
+md5anim "grenade reload" "../g_reload.md5anim" 6
+md5anim "grenade power" "../frag_power.md5anim" 10
 
 mdlscale 18
 mdlspec 100
