--- a/data/models/actors/player/gamma/vwep/md5.cfg
+++ b/data/models/actors/player/gamma/vwep/md5.cfg
@@ -7,34 +7,34 @@ md5bumpmap mesh "<compress:2>../../normals.jpg"
 
 md5pitch "" 1
 
-md5anim "idle"                         "../../vwep_p_idle.md5anim"         1
-md5anim "pain"                         "../../vwep_p_idle.md5anim"         1
-md5anim "switch"                       "../../vwep_p_reload.md5anim"       30
-md5anim "plasma"                       "../../vwep_p_idle.md5anim"         1
-md5anim "plasma shoot"                 "../../vwep_p_shoot.md5anim"        50
-md5anim "plasma reload"                "../../vwep_p_reload.md5anim"       33
-md5anim "shotgun"                      "../../vwep_sg_idle.md5anim"        1
-md5anim "shotgun shoot"                "../../vwep_sg_shoot.md5anim"       15
-md5anim "shotgun reload"               "../../vwep_sg_reload.md5anim"      16.8
-md5anim "submachine"                   "../../vwep_p_idle.md5anim"         1
-md5anim "submachine shoot"             "../../vwep_p_shoot.md5anim"        50
-md5anim "submachine reload"            "../../vwep_p_reload.md5anim"       20
-md5anim "flamer"                       "../../vwep_sg_idle.md5anim"        1
-md5anim "flamer shoot"                 "../../vwep_sg_shoot.md5anim"       30
-md5anim "flamer reload"                "../../vwep_fl_reload.md5anim"      15.5
-md5anim "pistol"                       "../../vwep_p_idle.md5anim"         1
-md5anim "pistol shoot"                 "../../vwep_p_shoot.md5anim"        50
-md5anim "pistol reload"                "../../vwep_p_reload.md5anim"       22
-md5anim "rifle"                        "../../vwep_sg_idle.md5anim"        1
-md5anim "rifle shoot"                  "../../vwep_sg_shoot.md5anim"       20
-md5anim "rifle reload"                 "../../vwep_sg_reload.md5anim"      16.8
-md5anim "paintgun"                     "../../vwep_p_idle.md5anim"         1
-md5anim "paintgun shoot"               "../../vwep_p_shoot.md5anim"        50
-md5anim "paintgun reload"              "../../vwep_p_reload.md5anim"       22
-md5anim "grenades"                     "../../vwep_gr_idle.md5anim"        1
-md5anim "grenades throw"               "../../vwep_gr_throw.md5anim"       35
-md5anim "grenades reload"              "../../vwep_gr_reload.md5anim"      9.34
-md5anim "grenades power"               "../../vwep_gr_power.md5anim"       10
+md5anim "idle" "../../vwep_p_idle.md5anim" 1
+md5anim "pain" "../../vwep_p_idle.md5anim" 1
+md5anim "switch" "../../vwep_p_reload.md5anim" 30
+md5anim "plasma" "../../vwep_p_idle.md5anim" 1
+md5anim "plasma shoot" "../../vwep_p_shoot.md5anim" 50
+md5anim "plasma reload" "../../vwep_p_reload.md5anim" 33
+md5anim "shotgun" "../../vwep_sg_idle.md5anim" 1
+md5anim "shotgun shoot" "../../vwep_sg_shoot.md5anim" 15
+md5anim "shotgun reload" "../../vwep_sg_reload.md5anim" 16.8
+md5anim "smg" "../../vwep_p_idle.md5anim" 1
+md5anim "smg shoot" "../../vwep_p_shoot.md5anim" 50
+md5anim "smg reload" "../../vwep_p_reload.md5anim" 20
+md5anim "flamer" "../../vwep_sg_idle.md5anim" 1
+md5anim "flamer shoot" "../../vwep_sg_shoot.md5anim" 30
+md5anim "flamer reload" "../../vwep_fl_reload.md5anim" 15.5
+md5anim "pistol" "../../vwep_p_idle.md5anim" 1
+md5anim "pistol shoot" "../../vwep_p_shoot.md5anim" 50
+md5anim "pistol reload" "../../vwep_p_reload.md5anim" 22
+md5anim "rifle" "../../vwep_sg_idle.md5anim" 1
+md5anim "rifle shoot" "../../vwep_sg_shoot.md5anim" 20
+md5anim "rifle reload" "../../vwep_sg_reload.md5anim" 16.8
+md5anim "paintgun" "../../vwep_p_idle.md5anim" 1
+md5anim "paintgun shoot" "../../vwep_p_shoot.md5anim" 50
+md5anim "paintgun reload" "../../vwep_p_reload.md5anim" 22
+md5anim "grenade" "../../vwep_gr_idle.md5anim" 1
+md5anim "grenade throw" "../../vwep_gr_throw.md5anim" 35
+md5anim "grenade reload" "../../vwep_gr_reload.md5anim" 9.34
+md5anim "grenade power" "../../vwep_gr_power.md5anim" 10
 
 mdlscale 18
 mdlspec 100
