--- a/data/models/projectiles/grenade/md5.cfg
+++ b/data/models/projectiles/grenade/md5.cfg
@@ -1,6 +1,6 @@
-md5load ../../weapons/grenades/frag.md5mesh
-md5skin mesh ../../weapons/grenades/skin.jpg ../../weapons/grenades/mask.jpg
-md5bumpmap mesh ../../weapons/grenades/normal.jpg
+md5load ../../weapons/grenade/frag.md5mesh
+md5skin mesh ../../weapons/grenade/skin.jpg ../../weapons/grenade/mask.jpg
+md5bumpmap mesh ../../weapons/grenade/normal.jpg
 
 mdlambient 0
 mdlspec 100
