--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -964,6 +964,7 @@ newgui options [
             guibutton "1024x768"             "screenres 1024 768"
             guibutton "1152x864"             "screenres 1152 864"
             guibutton "1280x960"             "screenres 1280 960"
+            guibutton "1280x1024"            "screenres 1280 1024"
             guibutton "1400x1050"            "screenres 1400 1050"
             guibutton "1600x1200"            "screenres 1600 1200"
             guibutton "1792x1344"            "screenres 1792 1344"
