fixed gridbindswitch key, added announcement filter based on team
Former-commit-id: 79b65d0ce8ced7e15298cbd780e5d6f1cddf3dd3

--- a/data/defaults.cfg
+++ b/data/defaults.cfg
@@ -174,10 +174,13 @@ gridbindstyle = 2
 gridbindswitch = 0
 editbind TAB [
 	if (= $gridbindstyle 2) [
-		if (= $gridbindswitch 3) [ showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0 ]
-		if (= $gridbindswitch 2) [ showpastegrid 0; showcursorgrid 0; showselgrid 1; gridbindswitch = 3 ]
-		if (= $gridbindswitch 1) [ showpastegrid 0; showcursorgrid 1; showselgrid 0; gridbindswitch = 2 ]
-		if (= $gridbindswitch 0) [ showpastegrid 1; showcursorgrid 0; showselgrid 0; gridbindswitch = 1 ]
+		if (= $gridbindswitch 3) [ showpastegrid 0; showcursorgrid 0; showselgrid 0; gridbindswitch = 0 ] [
+			if (= $gridbindswitch 2) [ showpastegrid 0; showcursorgrid 0; showselgrid 1; gridbindswitch = 3 ] [
+				if (= $gridbindswitch 1) [ showpastegrid 0; showcursorgrid 1; showselgrid 0; gridbindswitch = 2 ] [
+					if (= $gridbindswitch 0) [ showpastegrid 1; showcursorgrid 0; showselgrid 0; gridbindswitch = 1 ]
+				]
+			]
+		]
 	]
 	if (= $gridbindstyle 1) [
 		if (= $gridbindswitch 1) [
