bot/self damage, crosshair/area, and hitpush tweaks
Former-commit-id: a1d4ac4458e8d9329e042e6c390c024096b0ca38

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -278,6 +278,7 @@ newgui game [
 		guilist [
 			guilist [
 				guilist [
+					vardef selfdamage		"self damage"
 					vardef teamdamage		"team damage"
 					vardef maxhealth		"max health"
 					vardef overctfhealth	"over ctf health"
@@ -302,6 +303,7 @@ newgui game [
 				]
 				guistrut 1
 				guilist [
+					varfld selfdamage 8
 					varfld teamdamage 8
 					varfld maxhealth 8
 					varfld overctfhealth 8
