fix some clipping
Former-commit-id: d15beae8155b05bfa23f2c662e21b1a5a0644078

--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -35,8 +35,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-// gravity 80.0
+// gravity 75.0
 // impulsegravity 100.0
 // impulsespeed 60.0
 // impulsetime 0
@@ -59,9 +58,8 @@
 // maptitle "Bath by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-// movespeed 62.0
-numplayers 6
-// numteamplayers 6
+// movespeed 60.0
+// numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
