--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -35,8 +35,7 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// grasstaper 0.2
-// gravity 100.0
+// gravity 90.0
 // impulsegravity 62.5
 // impulsespeed 50.0
 // impulsetime 0
@@ -60,8 +59,7 @@
 // mmshadows 1
 // mmskylight 1
 // movespeed 50.0
-numplayers 10
-// numteamplayers 10
+// numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
 // shadowmapangle 0
