fix previous commit error, s/carbine/plasma/
Former-commit-id: f5a5560c39bce87cfea8f56f3f973c6dc7eea28e

--- a/data/menus.cfg
+++ b/data/menus.cfg
@@ -119,7 +119,7 @@ newgui name [
 	]
 ]
 
-wepnames = [ "  plasma" " shotgun" "chaingun" "  flamer" " carbine" "   rifle" "grenades"] //make them all the same size
+wepnames = [ "  pistol" " shotgun" "chaingun" "  flamer" "  plasma" "   rifle" "grenades"] //make them all the same size
 
 maplists = [ missionmaps missionmaps mainmaps mainmaps stfmaps stfmaps ctfmaps mctfmaps ]
 maplistsize = 20 //adjust if desired
