--- a/data/maps/4square.cfg
+++ b/data/maps/4square.cfg
@@ -21,7 +21,7 @@
 // cloudscrollx 0.001
 // cloudscrolly 0.002
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -31,8 +31,8 @@
 // fog 1250
 // fogcolour 0x101010
 gravity 35.0
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -53,7 +53,7 @@ gravity 35.0
 // maptitle "Four Square by Tony Cord"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 numplayers 10
 // numteamplayers 12
 // refractfog 1
