--- a/data/maps/deadsimple.cfg
+++ b/data/maps/deadsimple.cfg
@@ -22,7 +22,7 @@
 // cloudscrollx 0.02
 // cloudscrolly 0.01
 // cloudsubdiv 32
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -36,8 +36,8 @@
 // grassheight 4
 // grassscale 2
 // gravity 50.0
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -58,7 +58,7 @@
 // maptitle "Dead Simple by Jonathan 'W!CK3D'"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 // numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
