--- a/data/maps/gladiator.cfg
+++ b/data/maps/gladiator.cfg
@@ -22,7 +22,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -38,8 +38,8 @@
 // grassstep 2.0
 // grasstaper 0.2
 gravity 50
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -60,7 +60,7 @@ gravity 50
 // maptitle "Gladiator by Anthony Cord"
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 numplayers 8
 // numteamplayers 8
 // refractfog 1
