--- a/data/maps/rivals.cfg
+++ b/data/maps/rivals.cfg
@@ -22,7 +22,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -37,8 +37,8 @@
 // grassscale 2
 // grasstaper 0.2
 gravity 50
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -59,7 +59,7 @@ gravity 50
 // maptitle "Rivals by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 numplayers 6
 // numteamplayers 6
 // refractfog 1
