--- a/data/maps/smouldering.cfg
+++ b/data/maps/smouldering.cfg
@@ -22,7 +22,7 @@
 // cloudscrollx 0.01
 // cloudscrolly -0.05
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,9 +35,9 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 90.0
-// impulsegravity 62.5
-// impulsespeed 50.0
+gravity 75.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -58,7 +58,7 @@
 // maptitle "Smouldering by Kurt Kessler"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 // numplayers 10
 // refractfog 1
 // shadowmapambient 0x000000
