--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -22,7 +22,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,9 +35,9 @@
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-// gravity 75.0
-// impulsegravity 100.0
-// impulsespeed 60.0
+gravity 65.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -58,7 +58,7 @@
 // maptitle "Bath by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-// movespeed 60.0
+movespeed 40
 // numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
