--- a/data/maps/siege.cfg
+++ b/data/maps/siege.cfg
@@ -21,7 +21,7 @@
 // cloudscrollx 0.003
 // cloudscrolly 0.008
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -31,8 +31,8 @@
 // fog 100000
 // fogcolour 0x8099B3
 gravity 50
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -53,7 +53,7 @@ gravity 50
 // maptitle "Siege by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 numplayers 14
 // numteamplayers 12
 // refractfog 1
