--- a/data/maps/vertigo.cfg
+++ b/data/maps/vertigo.cfg
@@ -21,7 +21,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -30,9 +30,9 @@
 // floorz 0.867
 // fog 4000
 // fogcolour 0x8099B3
-gravity 25.0
-// impulsegravity 75.0
-// impulsespeed 50.0
+gravity 30
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -53,7 +53,7 @@ gravity 25.0
 // maptitle ""
 // mmshadows 2
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
