--- a/data/maps/warehouse.cfg
+++ b/data/maps/warehouse.cfg
@@ -21,7 +21,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -31,8 +31,8 @@
 // fog 4000
 // fogcolour 0x8099B3
 // gravity 60.0
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -53,7 +53,7 @@
 // maptitle "Warehouse by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
