--- a/data/maps/warground.cfg
+++ b/data/maps/warground.cfg
@@ -22,7 +22,7 @@
 // cloudscrollx 0.01
 // cloudscrolly 0.005
 // cloudsubdiv 16
-// crawlspeed 30.0
+crawlspeed 20
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -36,8 +36,8 @@
 // grassheight 4
 // grassscale 2
 gravity 50
-// impulsegravity 62.5
-// impulsespeed 50.0
+impulsemod 60
+impulsespeed 30
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -58,7 +58,7 @@ gravity 50
 // maptitle "Warground by Tony Cord"
 // mmshadows 1
 // mmskylight 1
-// movespeed 50.0
+movespeed 40
 // numplayers 8
 // refractfog 1
 // shadowmapambient 0x000000
