--- a/data/acord/package.cfg
+++ b/data/acord/package.cfg
@@ -1305,6 +1305,21 @@ texture n "acord/tech2n.jpg" 1 0 0 0.5
 texture s "acord/tech2s.jpg" 1 0 0 0.5
 texture z "acord/tech2z.jpg" 1 0 0 0.5
 
+texture 0 "acord/glass1.jpg" 0 0 0 0.5
+texture n "acord/glass1n.jpg" 0 0 0 0.5
+texture s "acord/glass1s.jpg" 0 0 0 0.5
+texture z "acord/glass1z.jpg" 0 0 0 0.5
+
+texture 0 "acord/wall9.jpg" 0 0 0 0.5
+texture n "acord/wall9n.jpg" 0 0 0 0.5
+texture s "acord/wall9s.jpg" 0 0 0 0.5
+texture z "acord/wall9z.jpg" 0 0 0 0.5
+
+texture 0 "acord/wall9.jpg" 1 0 0 0.5
+texture n "acord/wall9n.jpg" 1 0 0 0.5
+texture s "acord/wall9s.jpg" 1 0 0 0.5
+texture z "acord/wall9z.jpg" 1 0 0 0.5
+
 setshader stdworld
 
 texture 0 "acord/brick1.jpg"
