updated binaries, fixed screen alias
Former-commit-id: 8d3f40cf5523b1334169d75843176f7ab6655f82

--- a/data/engine.cfg
+++ b/data/engine.cfg
@@ -314,8 +314,8 @@ alias stopauto [ noauto = 1 ]
 alias togglesound [ if (> $soundvol 0) [ soundvol 0; echo "sound off" ] [ soundvol 255; echo "sound on" ] ]
 
 alias screen [
-	hidehud 1
-	sleep 100 [ screenshot; echo "screenshot saved"; hidehud 0; ]
+	showhud 0
+	sleep 100 [ screenshot; echo "screenshot saved"; showhud 1; ]
 ]
 
 changeoutline = [
