ai/waypoint fixes
Former-commit-id: af6b50990a501de44284eb11a9c97925a7a65095

--- a/data/maps/bath.cfg
+++ b/data/maps/bath.cfg
@@ -10,7 +10,6 @@
 // bumperror 3
 // causticscale 100
 // caustictex "<anim:75>textures/caustics"
-// cloudalpha 1.0
 // cloudblend 1.0
 // cloudbox ""
 // cloudclip 0.5
@@ -22,7 +21,7 @@
 // cloudscrollx 0.0
 // cloudscrolly 0.0
 // cloudsubdiv 16
-crawlspeed 20
+// crawlspeed 20.0
 // edgetolerance 4
 // envmapradius 128
 // flarelights 0
@@ -35,9 +34,9 @@ crawlspeed 20
 // grassanimscale 0.03
 // grassheight 4
 // grassscale 2
-gravity 65.0
-impulsemod 60
-impulsespeed 30
+// gravity 65.0
+// impulsemod 60.0
+// impulsespeed 30.0
 // impulsetime 0
 // jumpspeed 50.0
 // ladderspeed 1.0
@@ -50,15 +49,14 @@ impulsespeed 30
 // lighterror 1
 // lightlod 0
 // lightprecision 35
-// liquiddampen 1.0
 // liquidfric 5.0
-// liquidscale 0.9
+// liquidspeed 0.85
 // lmshadows 1
 // mapmusic ""
 // maptitle "Bath by LuckyStrike-Rx"
 // mmshadows 2
 // mmskylight 1
-movespeed 40
+// movespeed 40.0
 // numplayers 6
 // refractfog 1
 // shadowmapambient 0x000000
